# syncwerk-server-daemon

./: .gitignore  README.markdown  README.testing.md  configure.ac  updateversion.sh
ci/: run.py  serverctl.py
common/: Makefile.am  block-backend-fs.c  block-backend.c  block-backend.h  block-mgr.c  block-mgr.h  block-tx-utils.c  block.h  branch-mgr.c  branch-mgr.h  commit-mgr.c  commit-mgr.h  common.h  config-mgr.c  config-mgr.h  diff-simple.c  diff-simple.h  fs-mgr.c  fs-mgr.h  log.c  log.h  merge-new.c  merge-new.h  mq-mgr.c  mq-mgr.h  obj-backend-fs.c  obj-backend-riak.c  obj-backend.h  obj-store.c  obj-store.h  rpc-service.c  syncwerk-crypt.c  syncwerk-crypt.h  syncwerk-server-db.c  syncwerk-server-db.h  syncwerk-server-utils.c  syncwerk-server-utils.h  vc-common.c  vc-common.h
common/cdc/: Makefile.am  cdc.c  cdc.h
common/db-wrapper/: db-wrapper.c  db-wrapper.h  mysql-db-ops.c  pgsql-db-ops.c  sqlite-db-ops.c
controller/: Makefile.am  syncwerk-controller.c  syncwerk-controller.h
debian/: changelog  control  control.template  copyright  install  rules
doc/: Makefile.am
fhs/etc/syncwerk/: server.conf
files/etc/syncwerk/: server.conf  storage.ini
fuse/: Makefile.am  file.c  getattr.c  readdir.c  repo-mgr.c  repo-mgr.h  syncwerk-server-fuse.c  syncwerk-server-fuse.h  syncwerk-session.c  syncwerk-session.h
include/: Makefile.am  syncwerk-error.h  syncwerk-rpc.h
lib/: Makefile.am  branch.vala  commit.vala  copy-task.vala  crypt.vala  dir.vala  dirent.vala  file.vala  libsyncwerk.pc.in  repo.vala  task.vala  utils.c  utils.h  webaccess.vala
python/: Makefile.am
python/syncwerk/: Makefile.am
python/synserv/: Makefile.am
scripts/: breakpad.py  check_init_admin.py  export-users.sh  gc.bat  migrate-to-ceph.sh  objectstorage_migrate.py  reset-admin.sh  restapi.conf  restapi.sh  server-release.md  setup-syncwerk-mysql.py  setup-syncwerk-mysql.sh  setup-syncwerk.sh  sqlite2mysql.sh  syncwerk-server-cli-wrapper.sh  syncwerk-server-fsck.sh  syncwerk-server-fuse.sh  syncwerk-server-gc.sh  syncwerk.sh
scripts/upgrade/: add_collate.sh  db_update_1.3_1.4.py  db_update_helper.py  fix_mysql_user.py  minor-upgrade.sh  regenerate_secret_key.sh  upgrade_1.2_1.3.sh  upgrade_1.3_1.4.sh  upgrade_1.4_1.5.sh  upgrade_1.5_1.6.sh  upgrade_1.6_1.7.sh  upgrade_1.7_1.8.sh  upgrade_1.8_2.0.sh  upgrade_2.0_2.1.sh  upgrade_2.1_2.2.sh  upgrade_2.2_3.0.sh  upgrade_3.0_3.1.sh  upgrade_3.1_4.0.sh  upgrade_4.0_4.1.sh  upgrade_4.1_4.2.sh  upgrade_4.2_4.3.sh  upgrade_4.3_4.4.sh  upgrade_4.4_5.0.sh  upgrade_5.0_5.1.sh  upgrade_5.1_6.0.sh  upgrade_6.0_6.1.sh  upgrade_6.1_6.2.sh  upgrade_6.2_6.3.sh
scripts/upgrade/win32/: upgrade_1.7_1.8.bat  upgrade_1.8_2.0.bat  upgrade_2.0_2.1.bat  upgrade_2.1_3.0.bat  upgrade_3.0_3.1.bat  upgrade_3.1_4.0.bat  upgrade_4.0_4.1.bat  upgrade_4.1_4.2.bat  (+4 more)
server/: Makefile.am  access-file.c  block-tx-server.c  chunkserv-mgr.c  chunkserv-mgr.h  copy-mgr.c  copy-mgr.h  fileserver-config.h  http-server.c  http-server.h  http-status-codes.h  index-blocks-mgr.c  index-blocks-mgr.h  listen-mgr.c  listen-mgr.h  pack-dir.c  pack-dir.h  passwd-mgr.c  passwd-mgr.h  permission-mgr.c  permission-mgr.h  quota-mgr.c  quota-mgr.h  repo-mgr.c  repo-mgr.h  repo-op.c  repo-perm.c  share-mgr.c  share-mgr.h  size-sched.c  size-sched.h  syncwerk-server-daemon.c  syncwerk-session.c  syncwerk-session.h  token-mgr.c  token-mgr.h  upload-file.c  virtual-repo.c  web-accesstoken-mgr.c  web-accesstoken-mgr.h  (+2 more)
server/gc/: Makefile.am  fsck.c  fsck.h  gc-core.c  repo-mgr.c  repo-mgr.h  syncwerk-server-fsck.c  syncwerk-server-gc.c  syncwerk-server-migrate.c  syncwerk-session.c  syncwerk-session.h  verify.c
server/processors/: check-protocol-slave-proc.c  check-protocol-slave-proc.h  check-quota-common.h  check-tx-slave-proc.c  check-tx-slave-proc.h  check-tx-slave-v2-proc.c  check-tx-slave-v2-proc.h  check-tx-slave-v3-proc.c  check-tx-slave-v3-proc.h  checkbl-proc.c  checkbl-proc.h  checkff-proc.c  checkff-proc.h  heartbeat-proc.c  heartbeat-proc.h  put-sharedb-proc.c  put-sharedb-proc.h  putbranch-proc.c  putbranch-proc.h  putca-proc.c  putca-proc.h  putcommit-proc.c  putcommit-proc.h  putcommit-v2-proc.c  putcommit-v2-proc.h  putcommit-v3-proc.c  putcommit-v3-proc.h  putcs-proc.c  putcs-proc.h  putcs-v2-proc.c  putcs-v2-proc.h  putfs-proc.c  putfs-proc.h  putfs-v2-proc.c  putfs-v2-proc.h  putrepoemailtoken-proc.c  putrepoemailtoken-proc.h  recvblock-proc.c  recvblock-proc.h  recvblock-v2-proc.c  (+17 more)
tests/: config.py  conftest.py  utils.py
tests/conf/: ccnet.conf
tests/test_file_property_and_dir_listing/: test_file_property_and_dir_listing.py
tests/test_group/: test_groups.py
tests/test_password/: test_password.py
tests/test_repo_manipulation/: test_repo_manipulation.py
tests/test_server_config/: test_server_config.py
tests/test_share_and_perm/: test_shared_repo_perm.py  test_structure_repo_perm.py
tests/test_trashed_repos/: test_trashed_repos.py
tests/test_user/: test_users.py
tools/: Makefile.am  syncwerk-admin  syncwerk-server-daemon-init.c
(+25 files in other folders)
